--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -1,3 +1,75 @@
+.portfolio__link {
+
+    &:hover,
+    &:focus {
+        box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+            0px 1px 1px rgba(0, 0, 0, 0.12);
+    }
+}
+
+.portfolio__thumb {
+    position: relative;
+    overflow: hidden;
+    bottom: 0;
+}
+
+.portfolio__img {
+    width: 370px;
+    height: 294px;
+}
+
+.portfolio__link &:hover .portfolio__box,
+&:focus .portfolio__box {
+    opacity: 1;
+    transform: translateY(-100%);
+}
+
+
+.portfolio__box {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    opacity: 0;
+    transition-property: opacity, transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio__text {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.6;
+    color: $background-header-color;
+    padding: 63px 24px;
+}
+
+.portfolio__list {
+    padding: 20px 24px;
+    border: 1px solid #eeeeee;
+    border-top: 0;
+}
+
+.portfolio__title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    color: $title-color;
+    margin-bottom: 4px;
+}
+
+.portfolio__subtitle {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.9;
+    color: $text-color;
+}
+
+
+
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
