--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -75,12 +75,11 @@
     height: 294px;
 }
 
-.portfolio__link &:hover .portfolio__box,
-&:focus .portfolio__box {
+.portfolio__link:hover .portfolio__box,
+.portfolio__link:focus .portfolio__box {
     opacity: 1;
     transform: translateY(-100%);
 }
-
 
 .portfolio__box {
     width: 100%;
